# Shamir-sSecretSharing

./: .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt  main.cpp
cpp/include/: SecretSharing.h
cpp/src/: SecretSharing.cpp
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/src/secret_sharing/: mod.rs  share_generation.rs  share_reconstruction.rs
rust/src/utils/: mod.rs
